--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.9",
+    "hamburger-react": "^2.5.0",
     "jsx-to-string": "^1.4.0",
     "next": "14.2.3",
     "react": "^18",
