--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.1.9",
     "hamburger-react": "^2.5.0",
     "jsx-to-string": "^1.4.0",
+    "multi-range-slider-react": "^2.0.7",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
