--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^5.2.1",
+    "react-responsive-modal": "^6.4.2",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.26.4",
     "styled-components": "^6.1.11",
