--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^11.1.9",
     "hamburger-react": "^2.5.0",
     "jsx-to-string": "^1.4.0",
+    "material-ripple-effects": "^2.0.1",
     "multi-range-slider-react": "^2.0.7",
     "next": "14.2.3",
     "react": "^18",
