--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "multi-range-slider-react": "^2.0.7",
     "next": "14.2.3",
     "react": "^18",
+    "react-color": "^2.19.3",
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^5.2.1",
