--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^5.2.1",
+    "react-pick-color": "^2.0.0",
     "react-responsive-modal": "^6.4.2",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.26.4",
