--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-responsive-modal": "^6.4.2",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.26.4",
+    "search-array": "^1.6.0",
     "styled-components": "^6.1.11",
     "zustand": "^4.5.2"
   },
