--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-color": "^2.19.3",
     "react-colorful": "^5.6.1",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^5.2.1",
@@ -30,6 +31,7 @@
     "react-tooltip": "^5.26.4",
     "search-array": "^1.6.0",
     "styled-components": "^6.1.11",
+    "use-undoable": "^5.0.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
